crates/strider/tests/snapshots/aarch64__patterns__recursive_with_accumulator.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x854:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v12" [color="#888888", style=dashed];
  "v12" -> "11" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v13" [color="#888888", style=dashed];
  "v13" -> "11" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v14" [color="#888888", style=dashed];
  "v14" -> "11" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v15" [color="#888888", style=dashed];
  "v15" -> "11" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "16" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "19" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "20" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "21" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "23" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "25" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v2" -> "28" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "25" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "19" -> "28" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "31" -> "28" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "31" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "30" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "29" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "32" -> "29" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "32" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "33" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "35" -> "34" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "35" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "36" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "36" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "41" -> "36" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "41" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "39" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "39" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
